added categories nativeQuerySolution